fix: toggling search page on mobile

--- a/packages/theme/src/client/styles/search.scss
+++ b/packages/theme/src/client/styles/search.scss
@@ -62,14 +62,14 @@
       white-space: normal;
       color: var(--c-text);
 
-      .title {
+      .suggestion-title {
         font-size: 20px;
         line-height: 1.5;
         font-weight: 600;
         display: block;
       }
 
-      .subtitle {
+      .suggestion-subtitle {
         font-size: 16px;
         line-height: 1.5;
         margin-top: 5px;
@@ -81,7 +81,7 @@
     &.focused {
       background-color: transparent;
 
-      .title, .subtitle {
+      .suggestion-title, .suggestion-subtitle {
         color: var(--c-text-accent);
       }
     }
@@ -109,11 +109,11 @@
       padding: 0.4rem 0;
 
       a {
-        .title {
+        .suggestion-title {
           font-size: 18px;
           line-height: 1.3;
         }
-        .subtitle {
+        .suggestion-subtitle {
           font-size: 14px;
           line-height: 1.3;
         }
